--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://thepopswapdefi.github.io/PopSwap",
+  "homepage": ".",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
